# CGA_LCD_Capture

./: .gitmodules  CMakeLists.txt  README.md  TODO.md  setup.sh
dumper/: main.c
hardware/: tandy1100fd.txt
lcd2dvi/: CMakeLists.txt  dvi.c  lcd2dvi.h  main.c
lcd2vga/: CMakeLists.txt  main.c
lcd2vga/pwm/: rgb.pio  vga.h  vga_internal.h
liblcd/: CMakeLists.txt  lcd.c  lcd.h  lcd.pio  lcd_internal.h
src/: CMakeLists.txt  lcd.h  lcd.pio  main.c  tusb_config.h  usb_descriptors.c  vga.h
src/lcd/: lcd.c  lcd.h  lcd.pio
src/libb64/: cencode.c
src/pwm/: CMakeLists.txt  dma.c  irq.c  modes.c  modes.h  pio.c  pwm.c  rgb.pio  vga.c  vga.h  vga_internal.h  vga_pwm.c
src/vga/: hsync.pio  rgb.pio  vga_constants.h  vsync.pio
